// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileReferenceModel can build a reference to a tile with the default specifications 1`] = `
TileReferenceModel {
  "direction": "right",
  "id": "id-6",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given direction 1`] = `
TileReferenceModel {
  "direction": "left",
  "id": "id-8",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given ratio 1`] = `
TileReferenceModel {
  "direction": "left",
  "id": "id-9",
  "ratio": 2,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build a reference to a tile with the given type 1`] = `
TileReferenceModel {
  "direction": "right",
  "id": "id-7",
  "ratio": 1,
  "type": "straight-tile",
}
`;

exports[`TileReferenceModel can build the model for a curved tile 1`] = `
CurvedTileModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`TileReferenceModel can build the model for a curved tile enlarged 1`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`TileReferenceModel can build the model for a straight tile 1`] = `
StraightTileModel {
  "direction": "right",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a curved tile at coordinates [100, 100] and angle 45 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "id-19",
  "model": CurvedTileModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 135,
  "outputCoord": Vector2D {
    "x": 22.21825406947977,
    "y": 100,
  },
  "type": "curved-tile",
  "x": 100,
  "y": 100,
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a curved tile at coordinates [undefined, undefined] and angle undefined 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "id-18",
  "model": CurvedTileModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 90,
  "outputCoord": Vector2D {
    "x": -55,
    "y": 55,
  },
  "type": "curved-tile",
  "x": 0,
  "y": 0,
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a curved tile enlarged at coordinates [100, 100] and angle 45 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "id-21",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 135,
  "outputCoord": Vector2D {
    "x": 22.21825406947977,
    "y": 100,
  },
  "type": "curved-tile-enlarged",
  "x": 100,
  "y": 100,
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a curved tile enlarged at coordinates [undefined, undefined] and angle undefined 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "id-20",
  "model": CurvedTileEnlargedModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 90,
  "outputCoord": Vector2D {
    "x": -55,
    "y": 55,
  },
  "type": "curved-tile-enlarged",
  "x": 0,
  "y": 0,
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a straight tile at coordinates [100, 100] and angle 45 1`] = `
Object {
  "angle": 45,
  "centerCoord": Vector2D {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "id": "id-17",
  "model": StraightTileModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 45,
  "outputCoord": Vector2D {
    "x": 22.218254069479784,
    "y": 177.78174593052023,
  },
  "type": "straight-tile",
  "x": 100,
  "y": 100,
}
`;

exports[`TileReferenceModel can compute the coordinates of the tile for a straight tile at coordinates [undefined, undefined] and angle undefined 1`] = `
Object {
  "angle": 0,
  "centerCoord": Vector2D {
    "x": 0,
    "y": 55,
  },
  "id": "id-16",
  "model": StraightTileModel {
    "direction": "right",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
    },
  },
  "outputAngle": 0,
  "outputCoord": Vector2D {
    "x": 0,
    "y": 110,
  },
  "type": "straight-tile",
  "x": 0,
  "y": 0,
}
`;
